<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutBaseTheme"
    android:background="@color/B3B3B3" >

    <include
        android:id="@+id/title"
        layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/length_40"
        android:orientation="horizontal"
        android:padding="@dimen/length_2" >

        <Button
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/length_2"
            android:layout_weight="1"
            android:background="@drawable/white_btn_selector"
            android:text="@string/paint_size"
            android:textSize="@dimen/length_15" />

        <Button
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_btn_selector"
            android:text="@string/paint_color"
            android:textSize="@dimen/length_15" />
    </LinearLayout>

    <com.example.lovestudy.view.DrawBoardView
        android:id="@+id/draw"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/clear"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/length_40"
        android:layout_margin="@dimen/length_2"
        android:background="@drawable/red_btn_selector"
        android:text="@string/clear_canvas"
        android:textColor="@color/white" />

</LinearLayout>