<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutBaseTheme" >

    <include
        android:id="@+id/title"
        layout="@layout/layout_title" />

    <Button
        android:id="@+id/data_store_sharedPreferences"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_45"
        android:layout_marginLeft="@dimen/length_5"
        android:layout_marginRight="@dimen/length_5"
        android:layout_marginTop="@dimen/length_5"
        android:background="@drawable/red_btn_selector"
        android:gravity="center"
        android:text="@string/data_store_sharedPreferences"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/data_store_file"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_45"
        android:layout_marginLeft="@dimen/length_5"
        android:layout_marginRight="@dimen/length_5"
        android:layout_marginTop="@dimen/length_5"
        android:background="@drawable/red_btn_selector"
        android:gravity="center"
        android:text="@string/data_store_file"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/data_store_database"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_45"
        android:layout_marginLeft="@dimen/length_5"
        android:layout_marginRight="@dimen/length_5"
        android:layout_marginTop="@dimen/length_5"
        android:background="@drawable/red_btn_selector"
        android:gravity="center"
        android:text="@string/data_store_database"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>