<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutBaseTheme" >

    <LinearLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/v0_hint_icon_main" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/main_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/v1_icon_view_selector"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/v1_text_view"
            android:textColor="@drawable/v1_text_color_selector"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/main_function"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/v1_icon_function_selector"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/v1_text_faction"
            android:textColor="@drawable/v1_text_color_selector"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/main_widget"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/v1_icon_widget_selector"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/v1_text_widget"
            android:textColor="@drawable/v1_text_color_selector"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/main_user"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/v1_icon_user_selector"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/v1_text_user"
            android:textColor="@drawable/v1_text_color_selector"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>