<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/length_10"
        android:layout_marginLeft="@dimen/length_10"
        android:layout_marginRight="@dimen/length_10"
        android:layout_marginTop="@dimen/length_10"
        android:background="@drawable/white_button_selector_stroke_2px"
        android:orientation="vertical"
        android:padding="1px"
        android:paddingBottom="@dimen/length_10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 生活、研究、娱乐 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/length_120"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <!-- 生活 -->

                <LinearLayout
                    android:id="@+id/module_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="@dimen/length_30"
                        android:layout_height="@dimen/length_30"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_my_life" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/life" />
                </LinearLayout>
                
                <!-- 研究 -->

                <LinearLayout
                    android:id="@+id/module_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="@dimen/length_30"
                        android:layout_height="@dimen/length_30"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_my_research" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/research" />
                </LinearLayout>
                
                <!-- 娱乐 -->

                <LinearLayout
                    android:id="@+id/module_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="@dimen/length_30"
                        android:layout_height="@dimen/length_30"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_my_entertainment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entertainment" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 学习、工作、交友 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/length_120"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <!-- 学习 -->

                <LinearLayout
                    android:id="@+id/module_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="@dimen/length_30"
                        android:layout_height="@dimen/length_30"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_my_learn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/learn" />
                </LinearLayout>

                <!-- 工作 -->

                <LinearLayout
                    android:id="@+id/module_five"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="@dimen/length_30"
                        android:layout_height="@dimen/length_30"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_my_work" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work" />
                </LinearLayout>

                <!-- 交友 -->

                <LinearLayout
                    android:id="@+id/module_six"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="@dimen/length_30"
                        android:layout_height="@dimen/length_30"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_my_dating" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dating" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>