<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutBaseTheme" >

    <include
        android:id="@+id/title"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/length_1"
                android:background="@drawable/white_button_selector_stroke_1px"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:padding="@dimen/length_5"
                    android:text="@string/animation_alpha" />

                <ImageView
                    android:id="@+id/img_alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/length_5"
                    android:src="@drawable/icon_jieqi_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/length_1"
                android:layout_marginLeft="@dimen/length_1"
                android:layout_marginRight="@dimen/length_1"
                android:layout_marginTop="@dimen/length_10"
                android:background="@drawable/white_button_selector_stroke_1px"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:padding="@dimen/length_5"
                    android:text="@string/animation_scale" />

                <ImageView
                    android:id="@+id/img_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/length_5"
                    android:src="@drawable/icon_jieqi_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/length_1"
                android:layout_marginLeft="@dimen/length_1"
                android:layout_marginRight="@dimen/length_1"
                android:layout_marginTop="@dimen/length_10"
                android:background="@drawable/white_button_selector_stroke_1px"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:padding="@dimen/length_5"
                    android:text="@string/animation_translate" />

                <ImageView
                    android:id="@+id/img_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/length_5"
                    android:src="@drawable/icon_jieqi_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/length_1"
                android:layout_marginLeft="@dimen/length_1"
                android:layout_marginRight="@dimen/length_1"
                android:layout_marginTop="@dimen/length_10"
                android:background="@drawable/white_button_selector_stroke_1px"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_button_selector_stroke_1px"
                    android:padding="@dimen/length_5"
                    android:text="@string/animation_rotate" />

                <ImageView
                    android:id="@+id/img_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/length_5"
                    android:src="@drawable/icon_jieqi_4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>